SERVER-60762 Error when partitionBy is a constant array